# jewel-swap

./: .env  .env.example  .env.production  .gitignore  README.md  config-overrides.js  deploy-contracts.sh  deployment-env-example.txt  netlify.toml  package-lock.json  package.json  tailwind.config.js  upgrade-staking.sh  whalehub_vault_full_simulator_v5.html
.claude/: settings.local.json
docs/: README.md  SUMMARY.md  internal-overview.md
docs/getting-started/: how-it-works.md  supported-wallets.md
docs/staking/: claiming-rewards.md  locking-aqua.md  restaking-blub.md  unstaking.md  yield-mechanics.md
public/: _headers  _redirects  clear-cache.html  index.html  manifest.json  netlify.toml
scripts/: add-vault-pools.sh  claim_balances.py  get_pre_corruption_state.py  multisig_emergency_reset.py  multisig_upgrade.py  restore_pre_corruption_state.py
soroban-contracts/staking-contract/: Cargo.toml
soroban-contracts/staking-contract/bot/: .env.example  .gitignore  blub_minter.py  bot.py  config.py  contract_invoker.py  database.py  event_listener.py  requirements.txt
soroban-contracts/staking-contract/governance/src/: lib.rs
soroban-contracts/staking-contract/liquidity/: Cargo.toml
soroban-contracts/staking-contract/liquidity/src/: lib.rs
soroban-contracts/staking-contract/rewards/src/: lib.rs
soroban-contracts/staking-contract/staking/: Cargo.toml  distribute_new_blub.sh  migrate-v1.2.0.sh  migration_snapshot.json  migration_state.json  upgrade-v1.3.0.sh
soroban-contracts/staking-contract/staking/src/: lib.rs
src/: App.tsx  index.scss
(+80 files in other folders)
