[workspace]
members = [
    "staking",
    "governance",
    "rewards",
    "shared",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "21.7.0"
whalehub-shared = { path = "shared" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

